# tiny_llm

./: .gitignore  README.md  pyproject.toml
data/: raw_cli_pairs.txt  test_commands_heldout.txt  test_instructions_heldout.txt
scripts/: benchmark_generation.py  convert_raw_to_jsonl.py  create_tokenizer_corpus.py  eval_cli_accuracy.py  generate_command.py  prepare_data.py  sanity_check_model.py  stream_wiki_to_shards.py  train_cli_sft.py  train_pretrain.py  train_tokenizer.py
src/tiny_llm/: __init__.py  config.py  data.py  layers.py  model.py  rope.py  tokenizer.py
src/tiny_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
